# fooocus_plugin

./: .gitignore  Cargo.toml  README.md  config.toml  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
