[package]
name = "fooocus_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fooocus_plugin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20"

toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default"] }
nacos-sdk = { git = "https://github.com/gh-efforts/nacos-sdk-rust.git", version = "0.3.3", features = ["default", "tls"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
named-lock = "0.3"
async-openai = { git = "https://github.com/64bit/async-openai.git", default-features = false, features = ["rustls-webpki-roots"]}
reqwest = { version = "0.11", default-features = false}
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[profile.release]
#lto = true